Solved bug with components that should be visible only when user is authenticated. Before solved it, when the application reloads, components such as navbar and chat pane are visible for a few seconds until the page finish loading

--- a/src/style.css
+++ b/src/style.css
@@ -347,11 +347,15 @@ footer {
 }
 
 .messaging {
-    
+	visibility: hidden;
 	padding: 0 0 50px 0;
 }
 
 .msg_history {
 	height: 516px;
 	overflow-y: auto;
+}
+
+#navbar{
+	visibility: hidden;
 }
